// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Accordion Accordion smoke-test 1`] = `
<kd-accordion startnumber="1"
              expandlabel="Expand all items"
              collapselabel="Collapse all items"
>
  <kd-accordion-item opened>
    <span slot="title">
      Accordion Title 1
    </span>
    <span slot="subtitle">
      Accordion subtitle 1
    </span>
    <div slot="body">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
            eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </kd-accordion-item>
  <kd-accordion-item>
    <span slot="title">
      Accordion Title 2
    </span>
    <span slot="subtitle">
      Accordion subtitle 2
    </span>
    <div slot="body">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
            eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </kd-accordion-item>
  <kd-accordion-item>
    <span slot="title">
      Accordion Title 3
    </span>
    <span slot="subtitle">
      Accordion subtitle 3
    </span>
    <div slot="body">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
            eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </kd-accordion-item>
</kd-accordion>
<div class="kd-accordion">
  <div class="toggle-container">
    <a href="javascript:void(0)">
      Expand all items
    </a>
  </div>
  <div class="accordion-item-container">
    <slot>
    </slot>
  </div>
</div>
<div class=" kd-accordion-item opened ">
  <div class="kd-accordion-item-title"
       tabindex="0"
       role="button"
       aria-controls="kd-accordion-item-body-1"
       aria-expanded="true"
       id="kd-accordion-item-title-1"
  >
    <div class="title">
      <slot name="title">
      </slot>
      <div class="kd-accordion-item-subtitle">
        <slot name="subtitle">
        </slot>
      </div>
    </div>
    <div class="expand-icon">
      <kd-icon>
      </kd-icon>
    </div>
  </div>
  <div class="kd-accordion-item-body"
       role="region"
       id="kd-accordion-item-body-1"
       aria-labelledby="kd-accordion-item-title-1"
  >
    <div class="kd-accordion-item-detail">
      <slot name="body">
      </slot>
    </div>
  </div>
</div>
<div class=" kd-accordion-item ">
  <div class="kd-accordion-item-title"
       tabindex="0"
       role="button"
       aria-controls="kd-accordion-item-body-2"
       aria-expanded="false"
       id="kd-accordion-item-title-2"
  >
    <div class="title">
      <slot name="title">
      </slot>
      <div class="kd-accordion-item-subtitle">
        <slot name="subtitle">
        </slot>
      </div>
    </div>
    <div class="expand-icon">
      <kd-icon>
      </kd-icon>
    </div>
  </div>
  <div class="kd-accordion-item-body"
       role="region"
       id="kd-accordion-item-body-2"
       aria-labelledby="kd-accordion-item-title-2"
  >
    <div class="kd-accordion-item-detail">
      <slot name="body">
      </slot>
    </div>
  </div>
</div>
<div class=" kd-accordion-item ">
  <div class="kd-accordion-item-title"
       tabindex="0"
       role="button"
       aria-controls="kd-accordion-item-body-3"
       aria-expanded="false"
       id="kd-accordion-item-title-3"
  >
    <div class="title">
      <slot name="title">
      </slot>
      <div class="kd-accordion-item-subtitle">
        <slot name="subtitle">
        </slot>
      </div>
    </div>
    <div class="expand-icon">
      <kd-icon>
      </kd-icon>
    </div>
  </div>
  <div class="kd-accordion-item-body"
       role="region"
       id="kd-accordion-item-body-3"
       aria-labelledby="kd-accordion-item-title-3"
  >
    <div class="kd-accordion-item-detail">
      <slot name="body">
      </slot>
    </div>
  </div>
</div>
`;

exports[`Components/Accordion AccordionWithIcons smoke-test 1`] = `
<kd-accordion startnumber="1"
              expandlabel="Expand all items"
              collapselabel="Collapse all items"
>
  <kd-accordion-item opened>
    <kd-icon slot="icon"
             fill="var(--kd-color-text-placeholder)"
    >
    </kd-icon>
    <span slot="title">
      Accordion Title 1
    </span>
    <span slot="subtitle">
      Accordion subtitle 1
    </span>
    <div slot="body">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
            eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </kd-accordion-item>
  <kd-accordion-item>
    <kd-icon slot="icon"
             fill="var(--kd-color-text-success)"
    >
    </kd-icon>
    <span slot="title">
      Accordion Title 2
    </span>
    <span slot="subtitle">
      Accordion subtitle 2
    </span>
    <div slot="body">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
            eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </kd-accordion-item>
  <kd-accordion-item>
    <kd-icon slot="icon"
             fill="var(--kd-color-text-destructive)"
    >
    </kd-icon>
    <span slot="title">
      Accordion Title 3
    </span>
    <span slot="subtitle">
      Accordion subtitle 3
    </span>
    <div slot="body">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
            eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </kd-accordion-item>
</kd-accordion>
<div class="kd-accordion">
  <div class="toggle-container">
    <a href="javascript:void(0)">
      Expand all items
    </a>
  </div>
  <div class="accordion-item-container">
    <slot>
    </slot>
  </div>
</div>
<div class=" kd-accordion-item opened ">
  <div class="kd-accordion-item-title"
       tabindex="0"
       role="button"
       aria-controls="kd-accordion-item-body-1"
       aria-expanded="true"
       id="kd-accordion-item-title-1"
  >
    <div class="icon">
      <slot name="icon">
      </slot>
    </div>
    <div class="title">
      <slot name="title">
      </slot>
      <div class="kd-accordion-item-subtitle">
        <slot name="subtitle">
        </slot>
      </div>
    </div>
    <div class="expand-icon">
      <kd-icon>
      </kd-icon>
    </div>
  </div>
  <div class="kd-accordion-item-body"
       role="region"
       id="kd-accordion-item-body-1"
       aria-labelledby="kd-accordion-item-title-1"
  >
    <div class="kd-accordion-item-detail">
      <slot name="body">
      </slot>
    </div>
  </div>
</div>
<svg focusable="false"
     preserveaspectratio="xMidYMid meet"
     xmlns="http://www.w3.org/2000/svg"
     fill="var(--kd-color-text-placeholder)"
     aria-hidden="true"
     width="24"
     height="24"
     viewbox="0 0 32 32"
>
  <path d="M7.7 4.7a14.7 14.7 0 00-3 3.1L6.3 9A13.26 13.26 0 018.9 6.3zM4.6 12.3l-1.9-.6A12.51 12.51 0 002 16H4A11.48 11.48 0 014.6 12.3zM2.7 20.4a14.4 14.4 0 002 3.9l1.6-1.2a12.89 12.89 0 01-1.7-3.3zM7.8 27.3a14.4 14.4 0 003.9 2l.6-1.9A12.89 12.89 0 019 25.7zM11.7 2.7l.6 1.9A11.48 11.48 0 0116 4V2A12.51 12.51 0 0011.7 2.7zM24.2 27.3a15.18 15.18 0 003.1-3.1L25.7 23A11.53 11.53 0 0123 25.7zM27.4 19.7l1.9.6A15.47 15.47 0 0030 16H28A11.48 11.48 0 0127.4 19.7zM29.2 11.6a14.4 14.4 0 00-2-3.9L25.6 8.9a12.89 12.89 0 011.7 3.3zM24.1 4.6a14.4 14.4 0 00-3.9-2l-.6 1.9a12.89 12.89 0 013.3 1.7zM20.3 29.3l-.6-1.9A11.48 11.48 0 0116 28v2A21.42 21.42 0 0020.3 29.3z">
  </path>
</svg>
<div class=" kd-accordion-item ">
  <div class="kd-accordion-item-title"
       tabindex="0"
       role="button"
       aria-controls="kd-accordion-item-body-2"
       aria-expanded="false"
       id="kd-accordion-item-title-2"
  >
    <div class="icon">
      <slot name="icon">
      </slot>
    </div>
    <div class="title">
      <slot name="title">
      </slot>
      <div class="kd-accordion-item-subtitle">
        <slot name="subtitle">
        </slot>
      </div>
    </div>
    <div class="expand-icon">
      <kd-icon>
      </kd-icon>
    </div>
  </div>
  <div class="kd-accordion-item-body"
       role="region"
       id="kd-accordion-item-body-2"
       aria-labelledby="kd-accordion-item-title-2"
  >
    <div class="kd-accordion-item-detail">
      <slot name="body">
      </slot>
    </div>
  </div>
</div>
<svg focusable="false"
     preserveaspectratio="xMidYMid meet"
     xmlns="http://www.w3.org/2000/svg"
     fill="var(--kd-color-text-success)"
     aria-hidden="true"
     width="24"
     height="24"
     viewbox="0 0 32 32"
>
  <path d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z">
  </path>
  <path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z">
  </path>
</svg>
<div class=" kd-accordion-item ">
  <div class="kd-accordion-item-title"
       tabindex="0"
       role="button"
       aria-controls="kd-accordion-item-body-3"
       aria-expanded="false"
       id="kd-accordion-item-title-3"
  >
    <div class="icon">
      <slot name="icon">
      </slot>
    </div>
    <div class="title">
      <slot name="title">
      </slot>
      <div class="kd-accordion-item-subtitle">
        <slot name="subtitle">
        </slot>
      </div>
    </div>
    <div class="expand-icon">
      <kd-icon>
      </kd-icon>
    </div>
  </div>
  <div class="kd-accordion-item-body"
       role="region"
       id="kd-accordion-item-body-3"
       aria-labelledby="kd-accordion-item-title-3"
  >
    <div class="kd-accordion-item-detail">
      <slot name="body">
      </slot>
    </div>
  </div>
</div>
<svg focusable="false"
     preserveaspectratio="xMidYMid meet"
     xmlns="http://www.w3.org/2000/svg"
     fill="var(--kd-color-text-destructive)"
     aria-hidden="true"
     width="24"
     height="24"
     viewbox="0 0 24 24"
>
  <path d="M12,1C5.9,1,1,5.9,1,12s4.9,11,11,11s11-4.9,11-11S18.1,1,12,1z M16.3,17.5L6.5,7.7l1.2-1.2l9.8,9.8L16.3,17.5z">
  </path>
  <path fill="none"
        d="M16.3,17.5L6.5,7.7l1.2-1.2l9.8,9.8L16.3,17.5z"
        data-icon-path="inner-path"
        opacity="0"
  >
  </path>
</svg>
`;
